[package]
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2018"
name = "blub"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.4.1"
cgmath = {version = "0.18.0", features = ["rand", "serde"]}
enumflags2 = "0.7.1"
env_logger = "0.8.2"
futures = "0.3"
image = {version = "0.23", default-features = false, features = ["png", "hdr"]}
lazy_static = "1.4"
log = "0.4"
more-asserts = "0.2"
notify = "5.0.0-pre.2"
rand = {version = "0.8.3", features = ["small_rng"]}
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shaderc = "0.7"
strum = "0.20"
strum_macros = "0.20.1"
tobj = "2.0.3"
wgpu = "0.7.0"
wgpu-profiler = "0.3.1"
winit = "0.24"
# egui and related
egui = "0.11.0"
epi = "0.11.0"
egui_wgpu_backend = {git = "https://github.com/Wumpf/egui_wgpu_backend", rev = "df8bf67083da269f255c5a2eab54756caa8e785c"}
egui_winit_platform = {git = "https://github.com/hasenbanck/egui_winit_platform", rev = "fdb71a6294ad866e74ed46ccb79ce59a2a459f76"}

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs", rev = "50e05776d128f2815f629e8064eb807b06ee013f"}
# wgpu = {version = "0.7", path = "../gfx-rs/wgpu-rs"}

# [patch."https://github.com/gfx-rs/wgpu"]
# wgpu-core = {version = "0.7", path = "../gfx-rs/wgpu/wgpu-core"}
# wgpu-types = {version = "0.7", path = "../gfx-rs/wgpu/wgpu-types"}

# [patch."https://github.com/Wumpf/wgpu-profiler"]
# wgpu-profiler = {version = "0.1", path = "../wgpu-profiler"}
