[package]
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2018"
name = "blub"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.4.1"
cgmath = {version = "0.18.0", features = ["rand", "serde"]}
enumflags2 = "0.7.1"
env_logger = "0.8.2"
futures = "0.3"
image = {version = "0.23", default-features = false, features = ["png", "hdr"]}
lazy_static = "1.4"
log = "0.4"
more-asserts = "0.2"
notify = "5.0.0-pre.2"
rand = {version = "0.8.3", features = ["small_rng"]}
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shaderc = "0.7"
strum = "0.20"
strum_macros = "0.20.1"
tobj = "3.0.0"
wgpu = "0.8"
wgpu-profiler = "0.4"
winit = "0.25"
# egui and related
egui = "0.12.0"
epi = "0.12.0"
egui_wgpu_backend = {git = "https://github.com/Wumpf/egui_wgpu_backend", branch = "use-wgpu-master"}
egui_winit_platform = {git = "https://github.com/hasenbanck/egui_winit_platform", rev = "9fd92782d8de22d7882168d7b5ae7a2eb02448d9"}

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "d4cdd461781d2c2b863f5a48455e82697f3499e4"}
# wgpu = {version = "0.7", path = "../gfx-rs/wgpu-rs"}

# [patch."https://github.com/gfx-rs/wgpu"]
# wgpu-core = {version = "0.7", path = "../gfx-rs/wgpu/wgpu-core"}
# wgpu-types = {version = "0.7", path = "../gfx-rs/wgpu/wgpu-types"}

# [patch."https://github.com/Wumpf/wgpu-profiler"]
# wgpu-profiler = {version = "0.1", path = "../wgpu-profiler"}
